// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns CreateApplicationTopologyLink - global search 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-6"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
      target="_blank"
    >
      View topology
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateApplicationTopologyLink 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testNamespace/testApp/topology?apiVersion=application.app.k8s.io"
    >
      View topology
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - ACM-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testApplicationNamespace/testApplicationName/details?apiVersion=application.app.k8s.io&cluster=cluster"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Cluster 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Default 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - HUB-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/testPolicyNamespace/testPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - Managed-Policy 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPolicy%26namespace%3DtestPolicyNamespace%26name%3DtestPolicyName"
    >
      testPolicyName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - NON-Application 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DApplication%26namespace%3DtestApplicationNamespace%26name%3DtestApplicationName"
    >
      testApplicationName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateDetailsLink - PolicyReport 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testPolicyReportNamespace/testPolicyReportNamespace/overview?showClusterIssues%3Dtrue"
    >
      testPolicyReport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateExternalLink from clusterip 1`] = `"http://clusterip"`;

exports[`Correctly returns CreateExternalLink from consoleURL 1`] = `
<AcmButton
  component="a"
  href="http://consoleurl"
  icon={<ExternalLinkAltIcon />}
  iconPosition="right"
  isInline={true}
  target="_blank"
  variant="link"
>
  Launch
</AcmButton>
`;

exports[`Correctly returns CreateExternalVMLink 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-7"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="https://testCluster.com/k8s/ns/testVM/kubevirt.io~v1~VirtualMachine/testVM"
      target="_blank"
    >
      Details
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Application resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-1"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/applications/details/testClusterNamespace/testClusterName/details?apiVersion=application.app.k8s.io&cluster=leaf-cluster"
      target="_blank"
    >
      testClusterName
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Cluster resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-2"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview?cluster%3Dundefined%26kind%3DCluster%26namespace%3DtestClusterNamespace%26name%3DtestClusterName"
      target="_blank"
    >
      testClusterName
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster Policy resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/governance/policies/details/default/global-policy"
    >
      global-policy
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster PolicyReport resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-5"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/infrastructure/clusters/details/testClusterNamespace/testClusterNamespace/overview?showClusterIssues%3Dtrue"
      target="_blank"
    >
      leaf-cluster-policyreport
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed cluster default resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-1"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="https://leaf-hub.com/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
      target="_blank"
    >
      testPodName
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Application resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/applications/details/testClusterNamespace/testClusterName/details?apiVersion=application.app.k8s.io"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Cluster resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterName/testClusterName/overview"
    >
      testClusterName
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub Policy resource 1`] = `
<body>
  <div>
    <a
      aria-disabled="false"
      class="pf-v5-c-button pf-m-link pf-m-inline"
      data-ouia-component-id="OUIA-Generated-Button-link-4"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      href="undefined/multicloud/governance/policies/details/default/hub-a-policy-test"
      target="_blank"
    >
      hub-a-policy-test
      <span
        class="pf-v5-c-button__icon pf-m-end"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub PolicyReport resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/infrastructure/clusters/details/testClusterNamespace/testClusterNamespace/overview?showClusterIssues%3Dtrue"
    >
      local-cluster-policyreport
    </a>
  </div>
</body>
`;

exports[`Correctly returns CreateGlobalSearchDetailsLink managed hub default resource 1`] = `
<body>
  <div>
    <a
      href="/multicloud/search/resources?cluster%3DtestCluster%26kind%3DPod%26namespace%3DtestPodNamespace%26name%3DtestPodName"
    >
      testPodName
    </a>
  </div>
</body>
`;

exports[`Correctly returns VMLaunchLinks 1`] = `
<body>
  <div>
    <div
      style="display: contents;"
    >
      <span
        class="pf-v5-c-label"
      >
        <button
          class="pf-v5-c-label__content"
          type="button"
        >
          <span
            class="pf-v5-c-label__text"
          >
            Launch links
          </span>
        </button>
      </span>
    </div>
  </div>
</body>
`;

exports[`Correctly returns VirtualMachineSnapshot indications 1`] = `
<body>
  <div>
    <div
      class="pf-v5-c-label-group pf-m-vertical"
    >
      <div
        class="pf-v5-c-label-group__main"
      >
        <ul
          aria-label="Label group category"
          class="pf-v5-c-label-group__list"
          role="list"
        >
          <li
            class="pf-v5-c-label-group__list-item"
          >
            <span
              class="pf-v5-c-label css-wm1cuv"
            >
              <span
                class="pf-v5-c-label__content"
              >
                <span
                  class="pf-v5-c-label__text"
                >
                  indication1
                </span>
              </span>
            </span>
          </li>
          <li
            class="pf-v5-c-label-group__list-item"
          >
            <span
              class="pf-v5-c-label css-wm1cuv"
            >
              <span
                class="pf-v5-c-label__content"
              >
                <span
                  class="pf-v5-c-label__text"
                >
                  indication2
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Correctly returns category components 1`] = `
<AcmLabels
  collapse={[]}
  labels={
    [
      "testcategory=category1",
      "testcategory=category2",
    ]
  }
/>
`;

exports[`Correctly returns empty CreateApplicationTopologyLink 1`] = `
<body>
  <div>
    <div>
      -
    </div>
  </div>
</body>
`;

exports[`Correctly returns empty CreateExternalLink 1`] = `"-"`;

exports[`Correctly returns empty CreateExternalVMLink 1`] = `
<body>
  <div>
    -
  </div>
</body>
`;

exports[`Correctly returns empty VirtualMachineSnapshot indications 1`] = `
<body>
  <div>
    -
  </div>
</body>
`;

exports[`Correctly returns empty labels 1`] = `"-"`;

exports[`Correctly returns label components 1`] = `
<AcmLabels
  collapse={[]}
  labels={
    [
      "testlabel=label1",
      "testlabel=label2",
    ]
  }
/>
`;

exports[`Correctly returns policyreport policies 1`] = `
<AcmLabels
  collapse={
    [
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
  labels={
    [
      "AUTH_OPERATOR_PROXY_ERROR",
      "CONTAINER_ROOT_PARTITION_SIZE",
      "MASTER_DEFINED_AS_MACHINESETS",
      "NODES_MINIMUM_REQUIREMENTS_NOT_MET",
      "UNSUPPORT_SDN_PLUGIN",
    ]
  }
/>
`;

exports[`Correctly returns url search params with 0 params 1`] = `"?cluster%3DtestCluster"`;

exports[`Correctly returns url search params with all params & apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;

exports[`Correctly returns url search params with all params without apigroup 1`] = `"?cluster%3DtestCluster%26kind%3DPod%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;
